--- a/composer.json
+++ b/composer.json
@@ -8,7 +8,7 @@
   ],
   "license": "MIT",
   "require": {
-    "php": "^7.2.5",
+    "php": "^7.2.5|^8.1.0",
     "braintree/braintree_php": "^6.9",
     "fideloper/proxy": "^4.2",
     "fruitcake/laravel-cors": "^1.0",
